# poker-assistant

./: .env.example  .gitignore  AGENTS.md  LICENSE-AGPL-v3  README.md  config.yaml  main.py  requirements.txt  solver_debug2.txt  stale_before.txt  stale_debug.txt  stale_may9_full.txt
.claude/: settings.local.json
capture/: __init__.py  base_capture.py  card_capture.py  file_capture.py  mss_capture.py
core/: game_loop.py  game_state.py  hand_manager.py  position_calculator.py
data/: poker_assistant.db-shm  poker_assistant.db-wal
docs/: DESIGN_NOTES.md  IMPLEMENTATION_PLAN.md  SPEC.md  snapshot.md
gui/: __init__.py  hud_overlay.py  main_window.py
preflop_charts/: 6max_gto.json
profiles/: coinpoker_6max.json  ggpoker_6max.json
recognition/: __init__.py  action_estimator.py  base_recognizer.py  button_recognizer.py  card_recognizer.py  dealer_recognizer.py  diff_detector.py  fold_badge_detector.py  name_recognizer.py  number_recognizer.py  seat_card_detector.py
scripts/: analysis_results.json  analyze_buttons.py  analyze_numbers.py  analyze_replays.py  analyze_screenshots.py  audit_db_integrity.py  button_analysis_results.json  capture_dealer_btn.py  capture_hero_cards.py  capture_screenshot.py  compare_solver_requests.py  live_test.py  measure_coordinates.py  number_analysis_results.json  test_hud_visual.py  test_llm_connection.py
solver/: README.md  solver_bridge.py
solver/postflop_cli/: Cargo.toml
solver/postflop_cli/src/: main.rs
strategy/: __init__.py  _deep_cfr_network.py  baseline_ranges.json  deep_cfr_bridge.py  llm_pipeline.py  (+6 more)
(+1023 files in other folders)
